css/custom.scss
---
---
@import "variables";

html {
  overflow-y: scroll;
}

.navbar-custom {
    background-color: $grey-color-dark;
    color: $wolfpack-white;
    border: 0;
  	border-radius: 0 !important;
    margin-bottom: 1px !important;
}

.navbar-custom .navbar-nav > li > a {
    color: #fff;
}

.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
    color: $wolfpack-white;
    // background-color: transparent;
    background-color: $grey-color;
}

.navbar-custom .navbar-nav > li > a:hover, .nav > li > a:focus {
    text-decoration: none;
    color: $wolfpack-white;
    background-color: $wolfpack-red-dark;
}

.navbar-custom .navbar-brand {
    color: #eeeeee;
    font-size: 20px;
    padding-left: 30px;
}
.navbar-custom .navbar-toggle {
    background-color: #eeeeee;
}
.navbar-custom .icon-bar {
    background-color: $wolfpack-red-dark;
}

.red-bg {
    background-color: $wolfpack-red-dark;
    color: $wolfpack-white;
}

.red-bg-fade {
    background-color: $wolfpack-red-dark;
    color: $wolfpack-white;
    background-image: linear-gradient(to bottom, darken($wolfpack-red-dark, 2%), lighten($wolfpack-red-dark, 2%));
}

.white-bg {
    background-color: $wolfpack-white;
    color: $grey-color-dark;
}

.grey-bg {
    background-color: $grey-color-dark;
    color: $wolfpack-off-white;
}

.masthead {
    max-width: 650px;
    display: block;
    margin-left: auto;
    margin-right: auto;

    .btn-lg {
        padding-top: 15px;
        padding-bottom: 15px;
        padding-left: 50px;
        padding-right: 50px;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .btn-outline-inverse {
      color: $wolfpack-white;
      background-color: transparent;
      border-style: solid;
      border-width: 2px;
      border-color: $wolfpack-white;
    }

    .btn-outline-inverse:hover,
    .btn-outline-inverse:focus,
    .btn-outline-inverse:active {
      color: $wolfpack-red-dark;
      background-color: $wolfpack-white;
      border-color: $wolfpack-white;
    }

    .code-inverse {
        color: $wolfpack-white;
        background-color: transparent;
        border-width: 0px;
        margin-left: 5px;
        margin-right: 5px;
        font-size: 20px;
    }
}

#headshot {
    display: inline;
    width: 300px;
    height: 300px;
    border-style: solid;
    border-width: 2px;
    border-color: $wolfpack-white;
    margin-top:15px;
    margin-bottom:10px;
}

#tagline {
    margin-top: 10px;
    margin-bottom: 15px;
}

#home-intro {
    margin-top: 50px;
    max-width: 800px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

hr {
  border-color: $grey-color-light !important;
}

.half-hr {
    width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.info-blurb-text {
    padding-left: 10px;
    padding-right: 10px;
    font-size: 16px;
}

#home-content {
    padding-bottom: 30px;
    max-width: 1200px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#home-resume {
    padding-top: 50px;
    padding-bottom: 50px;
    max-width: 950px;
    display: block;
    margin-left: auto;
    margin-right: auto;

    .btn {
        margin-top: 10px;
    }

    .btn-outline {
      color: $wolfpack-off-white;
      background-color: $grey-color-dark;
      border-style: solid;
      border-width: 2px;
      border-color: $wolfpack-off-white;
    }

    .btn-outline:hover {
      color: $grey-color-dark;
      background-color: $wolfpack-off-white;
      border-color: $wolfpack-off-white;
    }
}

#footer-custom {
    max-width: 700px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.fixed-width-content {
    max-width: 1140px;
    padding-left: 30px;
    padding-right: 30px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.page-header-custom {
    margin-top: 0px;
    padding-top: 35px;
    padding-bottom: 50px;
    padding-left: 0px !important;
    padding-right: 0px !important;
    text-align: center;

    @media screen and (min-width: 768px) {
        h1 {
            font-size: 60px;
            line-height: 1;
            text-align: left;
        }

        p {
            font-size: 24px !important;
            text-align: left;
        }
    }

    p {
        margin-bottom: 0px;
        font-weight: 300;
        line-height: 1.4;
        font-size: 20px;
        color: $wolfpack-off-white;
    }
}

.page-content-custom {
    margin-top: 30px;
    margin-bottom: 30px;
}

.row {
    .btn-lg {
        padding-top: 10px;
        padding-bottom: 10px;
        padding-left: 30px;
        padding-right: 30px;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .btn-outline {
      color: $wolfpack-red-dark;
      background-color: $wolfpack-white;
      border-style: solid;
      border-width: 2px;
      border-color: $wolfpack-red-dark;
    }

    .btn-outline:hover,
    .btn-outline:focus,
    .btn-outline:active {
      color: $wolfpack-white;
      background-color: $wolfpack-red-dark;
      border-color: $wolfpack-red-dark;
    }
}

.social-image {
    max-height: 120px;
    width: auto;
    margin-top: 20px;
}

.page-lead {
    max-width: 900px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

// Matching columns to the same height
// http://stackoverflow.com/questions/20547819/vertical-align-with-bootstrap-3
@media screen and (min-width: 768px) {
    .col-vertical-align {
        display: flex;
        align-items: center;
    }
}

.experience-image {
    max-height: 150px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: auto;

    @media screen and (max-width: 768px) {
        margin-top: 20px;
    }
}

.nav-tabs {
    @media screen and (max-width: 768px) {
        margin-left: 0px;
    }
}

.large-tab {
    margin-top: 20px;
    margin-bottom: 15px;
    line-height: 26.4px;
    font-size: 18px;

    @media screen and (min-width: 480px) {
        font-size: 24px;
    }
}

